--- a/data_preprocessing_template.ipynb
+++ b/data_preprocessing_template.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -53,93 +53,11 @@
     "colab_type": "code",
     "id": "aqHTg9bxWT_u"
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Country</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>Salary</th>\n",
-       "      <th>Purchased</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>France</td>\n",
-       "      <td>44.0</td>\n",
-       "      <td>72000.0</td>\n",
-       "      <td>No</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>Spain</td>\n",
-       "      <td>27.0</td>\n",
-       "      <td>48000.0</td>\n",
-       "      <td>Yes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>Germany</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>54000.0</td>\n",
-       "      <td>No</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>Spain</td>\n",
-       "      <td>38.0</td>\n",
-       "      <td>61000.0</td>\n",
-       "      <td>No</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>Germany</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Yes</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Country   Age   Salary Purchased\n",
-       "0   France  44.0  72000.0        No\n",
-       "1    Spain  27.0  48000.0       Yes\n",
-       "2  Germany  30.0  54000.0        No\n",
-       "3    Spain  38.0  61000.0        No\n",
-       "4  Germany  40.0      NaN       Yes"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "dataset = pd.read_csv('Data.csv')\n",
     "X = dataset.iloc[:, :-1].values\n",
-    "y = dataset.iloc[:, -1].values\n",
-    "dataset.head()"
+    "y = dataset.iloc[:, -1].values"
    ]
   },
   {
@@ -154,17 +72,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "hm48sif-WWsh"
    },
    "outputs": [],
-   "source": [
-    "from sklearn.model_selection import train_test_split\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2, random_state = 0)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
