--- a/data_preprocessing_template.ipynb
+++ b/data_preprocessing_template.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -47,17 +47,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "aqHTg9bxWT_u"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Country   Age   Salary Purchased\n",
+      "0   France  44.0  72000.0        No\n",
+      "1    Spain  27.0  48000.0       Yes\n",
+      "2  Germany  30.0  54000.0        No\n",
+      "3    Spain  38.0  61000.0        No\n",
+      "4  Germany  40.0      NaN       Yes\n",
+      "5   France  35.0  58000.0       Yes\n",
+      "6    Spain   NaN  52000.0        No\n",
+      "7   France  48.0  79000.0       Yes\n",
+      "8  Germany  50.0  83000.0        No\n",
+      "9   France  37.0  67000.0       Yes\n",
+      "\n",
+      "\n",
+      "[['France' 44.0 72000.0]\n",
+      " ['Spain' 27.0 48000.0]\n",
+      " ['Germany' 30.0 54000.0]\n",
+      " ['Spain' 38.0 61000.0]\n",
+      " ['Germany' 40.0 nan]\n",
+      " ['France' 35.0 58000.0]\n",
+      " ['Spain' nan 52000.0]\n",
+      " ['France' 48.0 79000.0]\n",
+      " ['Germany' 50.0 83000.0]\n",
+      " ['France' 37.0 67000.0]]\n"
+     ]
+    }
+   ],
    "source": [
     "dataset = pd.read_csv('Data.csv')\n",
     "X = dataset.iloc[:, :-1].values\n",
-    "y = dataset.iloc[:, -1].values"
+    "y = dataset.iloc[:, -1].values\n",
+    "print(dataset)\n",
+    "print('\\n')\n",
+    "print(X)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dealing with missing values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.impute import SimpleImputer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imputer = SimpleImputer()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imputer.fit(X[:,1:3])\n",
+    "X[:,1:3] = imputer.transform(X[:,1:3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['France' 44.0 72000.0]\n",
+      " ['Spain' 27.0 48000.0]\n",
+      " ['Germany' 30.0 54000.0]\n",
+      " ['Spain' 38.0 61000.0]\n",
+      " ['Germany' 40.0 63777.77777777778]\n",
+      " ['France' 35.0 58000.0]\n",
+      " ['Spain' 38.77777777777778 52000.0]\n",
+      " ['France' 48.0 79000.0]\n",
+      " ['Germany' 50.0 83000.0]\n",
+      " ['France' 37.0 67000.0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X)"
    ]
   },
   {
